// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SettingsLink renders correctly 1`] = `
<View
  accessible={true}
  focusable={true}
  isTVSelectable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={null}
>
  <View
    style={
      Array [
        Object {
          "borderBottomWidth": 0.5,
          "flex": 1,
          "height": 44,
          "justifyContent": "center",
          "marginLeft": 15,
          "paddingRight": 30,
        },
        Object {
          "borderBottomColor": "#C8C8CC",
        },
        undefined,
        undefined,
      ]
    }
  >
    <Text
      numberOfLines={1}
      style={
        Array [
          Object {
            "fontFamily": "System",
            "fontWeight": "400",
          },
          Object {
            "color": "#000000",
          },
          Array [
            Object {
              "fontSize": 17,
              "fontWeight": "400",
              "lineHeight": 22,
            },
            undefined,
          ],
        ]
      }
    >
      72b47a5f-db79-4431-a2ca-612d97f547cc
    </Text>
    <Text
      numberOfLines={1}
      style={
        Array [
          Object {
            "fontFamily": "System",
            "fontWeight": "400",
          },
          Object {
            "color": "#000000",
          },
          Array [
            Object {
              "backgroundColor": "transparent",
              "fontSize": 17,
              "fontWeight": "400",
              "lineHeight": 22,
              "position": "absolute",
              "right": 15,
              "textAlign": "right",
              "width": "60%",
            },
            Object {
              "color": "#8E8E93",
            },
            Object {
              "right": 35,
            },
          ],
        ]
      }
    >
      e87b6472-bbd7-4a6d-833a-0c5030189213
    </Text>
    <IoniconIcon
      name="ios-arrow-forward"
      style={
        Array [
          Object {
            "fontSize": 20,
            "paddingTop": 2,
            "position": "absolute",
            "right": 15,
          },
          Object {
            "color": "#C7C7CC",
          },
        ]
      }
    />
  </View>
</View>
`;

exports[`SettingsLink renders correctly as the last item 1`] = `
<View
  accessible={true}
  focusable={true}
  isTVSelectable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={null}
>
  <View
    style={
      Array [
        Object {
          "borderBottomWidth": 0.5,
          "flex": 1,
          "height": 44,
          "justifyContent": "center",
          "marginLeft": 15,
          "paddingRight": 30,
        },
        Object {
          "borderBottomColor": "#C8C8CC",
        },
        undefined,
        Object {
          "borderBottomWidth": 0,
        },
      ]
    }
  >
    <Text
      numberOfLines={1}
      style={
        Array [
          Object {
            "fontFamily": "System",
            "fontWeight": "400",
          },
          Object {
            "color": "#000000",
          },
          Array [
            Object {
              "fontSize": 17,
              "fontWeight": "400",
              "lineHeight": 22,
            },
            undefined,
          ],
        ]
      }
    >
      d8d6a18e-0553-44fa-9f68-158b7364bc5e
    </Text>
    <Text
      numberOfLines={1}
      style={
        Array [
          Object {
            "fontFamily": "System",
            "fontWeight": "400",
          },
          Object {
            "color": "#000000",
          },
          Array [
            Object {
              "backgroundColor": "transparent",
              "fontSize": 17,
              "fontWeight": "400",
              "lineHeight": 22,
              "position": "absolute",
              "right": 15,
              "textAlign": "right",
              "width": "60%",
            },
            Object {
              "color": "#8E8E93",
            },
            Object {
              "right": 35,
            },
          ],
        ]
      }
    >
      b40740ec-ccb1-41c6-8fa5-72147f467556
    </Text>
    <IoniconIcon
      name="ios-arrow-forward"
      style={
        Array [
          Object {
            "fontSize": 20,
            "paddingTop": 2,
            "position": "absolute",
            "right": 15,
          },
          Object {
            "color": "#C7C7CC",
          },
        ]
      }
    />
  </View>
</View>
`;
